--- a/Hamburger_Store_Managerment_System/src/main/webapp/resources/css/reservated.css
+++ b/Hamburger_Store_Managerment_System/src/main/webapp/resources/css/reservated.css
@@ -674,6 +674,7 @@ a.buttonsubmit:hover {
 .b03_skewed_slide_in {
     overflow: hidden;
     border: #000000 solid 1px;
+    border-radius: 8px;
 }
 
 .b03_skewed_slide_in div {
