--- a/Hamburger_Store_Managerment_System/src/main/webapp/resources/css/mypage.css
+++ b/Hamburger_Store_Managerment_System/src/main/webapp/resources/css/mypage.css
@@ -616,11 +616,12 @@ background:#1AAB8A;
     
         /* Modal Content/Box */
         .withdrawal-modal-content {
+        	border-radius:10px;
             background-color: #fefefe;
             margin: 15% auto; /* 15% from the top and centered */
             padding: 20px;
             border: 1px solid #888;
-            width: 50%; /* Could be more or less, depending on screen size */                          
+            width: 30%; /* Could be more or less, depending on screen size */                          
         }
         /* The Close Button */
         .withdrawal-close {
@@ -634,4 +635,33 @@ background:#1AAB8A;
             color: black;
             text-decoration: none;
             cursor: pointer;
+        }
+        .withdrawalH2 {
+        	font-size:22px;
+        	font-weight:600;
+        	text-align:center;
+        	border-bottom: 2px solid #000;
+        	padding-bottom:20px;
+        }
+        .nowPwClass {
+      	    width: 260px;
+		    height: 28px;
+		    font-size: 15px;
+		    padding: 0 0 2px 3px;
+		    background-color: #f1f1f1;
+		    position:relative;
+		    left:70px;
+		    top:10px;
+        }
+        .userDeleteClass {
+       	    width: 120px;
+		    height: 35px;
+		    font-size: 15px;
+		    background: #d1840e;
+		    color: #fff;
+		    margin: 30px 0 0 140px;
+		    display: block;
+		    text-align: center;
+		    outline: 0;
+		    border-color: #e79210;
         }
