pos 퍼블리싱 수정

--- a/Hamburger_Store_Managerment_System/src/main/webapp/resources/css/pos.css
+++ b/Hamburger_Store_Managerment_System/src/main/webapp/resources/css/pos.css
@@ -436,7 +436,7 @@ footer{clear: both; width: 30%;}
      	display:inline-block;
      	margin-left:50px;
      	border-radius: 10px;
-     	background:#f0de89;
+     	background:#ffce72ad;
      }
      .burgerOrSet-content > .setSelect >ul{
      	position : relative;
