--- a/Hamburger_Store_Managerment_System/src/main/webapp/resources/kiosk/css/screen.css
+++ b/Hamburger_Store_Managerment_System/src/main/webapp/resources/kiosk/css/screen.css
@@ -299,3 +299,4 @@ nav ul li:first-child { border-left:none; }
 .side_img li { display:inline-block;  position: relative; top: 7px; left:60px; margin-right:50px;}
 .side_img p{margin-top: -30px;}
 .side_img img { width:40px; height:40px;}
+.mySlides {display:none;}
