키오스크 광고 css 조정

--- a/Hamburger_Store_Managerment_System/src/main/webapp/resources/kiosk/css/screen.css
+++ b/Hamburger_Store_Managerment_System/src/main/webapp/resources/kiosk/css/screen.css
@@ -300,3 +300,4 @@ nav ul li:first-child { border-left:none; }
 .side_img p{margin-top: -30px;}
 .side_img img { width:40px; height:40px;}
 .mySlides {display:none;}
+.ad > img {margin:0 auto; width: 1024px;}
