--- a/Hamburger_Store_Managerment_System/src/main/webapp/resources/css/pos.css
+++ b/Hamburger_Store_Managerment_System/src/main/webapp/resources/css/pos.css
@@ -109,7 +109,7 @@ body{min-width: 1024px;}
 	position:relative !important;
 	top:0;
 }
-.navi > ul > li{ margin-right: 15%;}
+/* .navi > ul > li{ margin-right: 15%;} */
 .left-section{float: left; width: 35%;}
 .take{width: 100%; font-size: 16px; background: green; border-radius: 3px; color: white; height: 40px; line-height: 40px;}
 .take > p{margin-left: 20px; font-weight: 700;}
