--- a/Hamburger_Store_Managerment_System/src/main/webapp/resources/kiosk/css/screen.css
+++ b/Hamburger_Store_Managerment_System/src/main/webapp/resources/kiosk/css/screen.css
@@ -197,9 +197,7 @@ nav ul li:first-child { border-left:none; }
 	width:300px;
 }
 
-/*zoomoutdown animation*/
  .zoomOutDown {
-/*    position: absolute; */
   animation-name: zoomOutDown;
   animation-duration: 1s;
   animation-fill-mode: both;
@@ -300,12 +298,17 @@ nav ul li:first-child { border-left:none; }
 .side_img img { width:40px; height:40px;}
 .mySlides {display:none;}
 .ad > img {margin:0 auto; width: 1024px;}
-.v_img { width:60px; height:60px; position:absolute; left:620px; top:75px; display:none;}
-.v_img2 { width:60px; height:60px; position:absolute; left:870px; top:75px; display:none;}
-.v_img3 { width:60px; height:60px; position:absolute; left:600px; top:320px; display:none;}
-.v_img4 { width:60px; height:60px; position:absolute; left:770px; top:320px; display:none;}
-.v_img5 { width:60px; height:60px; position:absolute; left:950px; top:320px; display:none;}
-.v_img6 { width:60px; height:60px; position:absolute; left:600px; top:570px; display:none;}
-.v_img7 { width:60px; height:60px; position:absolute; left:770px; top:570px; display:none;}
-.v_img8 { width:60px; height:60px; position:absolute; left:950px; top:570px; display:none;}
-.slide_div2 table td:hover {background:#ff4500;}
+.v_img { width:60px; height:60px; position:absolute; left:620px; top:75px;}
+.v_img2 { width:60px; height:60px; position:absolute; left:870px; top:75px;}
+.v_img3 { width:60px; height:60px; position:absolute; left:600px; top:320px;}
+.v_img4 { width:60px; height:60px; position:absolute; left:770px; top:320px;}
+.v_img5 { width:60px; height:60px; position:absolute; left:950px; top:320px;}
+.v_img6 { width:60px; height:60px; position:absolute; left:600px; top:570px;}
+.v_img7 { width:60px; height:60px; position:absolute; left:770px; top:570px;}
+.v_img8 { width:60px; height:60px; position:absolute; left:950px; top:570px;}
+.slide_div2 table td:hover {background:#ff4500; color:#fff;}
+.slide_div2 p {font-weight:bold;}
+.sale_point_table,.payment_table {
+	background-color: #ffffff;
+        opacity: 0.5;
+}
