--- a/Hamburger_Store_Managerment_System/src/main/webapp/resources/kiosk/css/screen.css
+++ b/Hamburger_Store_Managerment_System/src/main/webapp/resources/kiosk/css/screen.css
@@ -227,7 +227,7 @@ nav ul li:first-child { border-left:none; }
  .modal_div {display: flex; justify-content: space-around; margin-top:30px;} 
  .modal_div img{ width : 100px;  height:100px; border:2px solid black; padding:15px; border-radius: 10px;}
  .modal_div > div > h4 { text-align:center; margin-top:10px;}
- .tab_btn button { outline:0; }
+ .tab_btn button { outline:0; cursor:pointer;}
  .modal_set li { display:inline-block; margin-right:30px;}
  .set_btn { border:none; background:transparent; cursor: pointer; font-size:20px; outline:0;}
  .set_div { background: #D9CA66; text-align:center; border-radius: 8px;}
@@ -312,3 +312,12 @@ nav ul li:first-child { border-left:none; }
 	background-color: #ffffff;
         opacity: 0.5;
 }
+.pay_img {width:400px; height:400px; border:1px solid black; display: inline-block; margin:15px 10px 15px 30px;}
+.pay_gif {width:400px; height:400px; border:1px solid black; display: inline-block;  margin:15px 10px 15px 30px;}
+.modalPay{max-width: 910px !important; padding: 0 !important;}
+
+.modal a.close-modal{display: none !important;}
+.wallet { width:400px; height:400px;}
+.pay_btn {width:200px; height:100px; font-size:20pt; font-weight:bold; margin-top:10px; float:right; position:relative; right:30px; bottom:11px; border-radius:12px; outline:0; border:none; cursor:pointer; background:}
+.text_div {text-align:center; font-size:15pt; font-weight:bold;}
+.text_header {text-align:center; font-size:25pt; font-weight:bold; background:#87CEFA; margin-bottom:10px;}
