--- a/Hamburger_Store_Managerment_System/src/main/webapp/resources/kiosk/css/screen.css
+++ b/Hamburger_Store_Managerment_System/src/main/webapp/resources/kiosk/css/screen.css
@@ -223,7 +223,7 @@ nav ul li:first-child { border-left:none; }
   animation-timing-function: cubic-bezier(0.175, 0.885, 0.320, 1);
   }
  }
- .modal_span { text-align: center;}
+ .modal_span { text-align: center; position: relative; left: 110px;}
  .modal_div {display: flex; justify-content: space-around; margin-top:30px;} 
  .modal_div img{ width : 100px;  height:100px; border:2px solid black; padding:15px; border-radius: 10px;}
  .modal_div > div > h4 { text-align:center; margin-top:10px;}
@@ -294,8 +294,8 @@ nav ul li:first-child { border-left:none; }
 .order_cancel_btn {position:relative; left:77px; cursor:pointer; box-shadow:3px 3px 3px 3px gray;}
 #order_add_btn {position:relative; left:130px; cursor:pointer; box-shadow:3px 3px 3px 3px gray;}
 .side_img {float:left; text-align: center;}
-.side_img li { display:inline-block;  position: relative; top: 7px; left:60px; margin-right:50px;}
-.side_img p{margin-top: -30px;}
+.side_img li {display:inline-block;  position: relative; top: 20px; left:60px; margin-right:50px;}
+.side_img p{margin-top: -40px;}
 .side_img img { width:40px; height:40px;}
 .mySlides {display:none;}
 .ad > img {margin:0 auto; width: 1024px;}
