Kiosk ZoomOutDown 효과 적용, css,Review 좋아요 이미지 간격 수정

--- a/Hamburger_Store_Managerment_System/src/main/webapp/resources/kiosk/css/screen.css
+++ b/Hamburger_Store_Managerment_System/src/main/webapp/resources/kiosk/css/screen.css
@@ -200,7 +200,7 @@ nav ul li:first-child { border-left:none; }
  .zoomOutDown {
   animation-name: zoomOutDown;
   animation-duration: 1s;
-  animation-fill-mode: both;
+  animation-fill-mode: none;
   background-image:url("/resources/img/chickenMenu/chipao.png");
   z-index: 99;
   width:240px;
