--- a/Hamburger_Store_Managerment_System/src/main/webapp/resources/kiosk/css/screen.css
+++ b/Hamburger_Store_Managerment_System/src/main/webapp/resources/kiosk/css/screen.css
@@ -37,8 +37,12 @@ nav ul li:first-child { border-left:none; }
 .image_out_div { margin-bottom: -5px; }
 .order_history_div { clear:both; position:relative; top:60px; color:#fff; width:1024px;}
 .order_history_p { font:bold 20px Dotum; position:relative; left:120px; line-height:10px;}
-.order_list_wrap{width:1024px;clear: both;  background-color: #fbceb1; }
-.order_list_div{  width:75%; height:200px;   overflow-y:scroll; }
+.order_list_wrap{width:1024px;clear: both;}
+.order_list_div{ border-radius: 5px;}
+.order_list_div ul{background: #ddd;}
+.order_list_div li{font-weight: 600;}
+.order_list_div ul li:first-child{margin-left: 40px;}
+.order_list_div ul li:last-child{margin-right: 40px;}
 /* .order_list_div > p{text-align:center; color:#fff; margin-top:10px; margin-bottom:10px;} */
 .p{    font-size: 18px;
     font-weight: 700;
@@ -175,23 +179,23 @@ nav ul li:first-child { border-left:none; }
     -moz-transition: left 0.30000000000000004s ease;
 }
 
-.table_list { width: 100%; text-align: center;  border-collapse: collapse;}
+.table_list { width: 100%; text-align: center;  border-collapse: collapse; background: #eee;}
 .table_list thead{text-align: center; }
 .table_list thead tr th{width:120px; border:1px solid #ff6e40; border-collapse: collapse; padding:5px;}
 .table_list tbody th{border:1px solid #ff6e40; border-collapse: collapse; width:120px; padding:5px;}
-.table_tr2 { width: 100%; text-align: center;}
+.table_tr2 { width: 100%; text-align: center; display: block; overflow-y:scroll; height: 250px; }
 .p_btn, .m_btn, .menu_del { width: 20px; height: 20px;}
-.menu_del { position:relative; left:67px; }
+.menu_del { position:relative; left:135px; width: 75px; height:28px; border:1px solid #141414; border-radius:8px; background: #fff;}
 .price_p { line-height: 5px; }
 .orderListBar{background-color: #702e2d;}
 .orderListBar table{padding:30px; width:100%;text-align: center;}
 .orderListBar table tr th{width:105px;}
 .table_tr2 td{padding-top:8px;}
 .table_tr2 td:first-child {
-   width:250px;
+   width:300px;
 }
 .table_tr2 td:nth-child(2) {
-   width:100px;
+   width:250px;
 }
 .table_tr2 td:nth-child(3) {
    width:300px;
