--- a/Hamburger_Store_Managerment_System/src/main/webapp/resources/kiosk/css/screen.css
+++ b/Hamburger_Store_Managerment_System/src/main/webapp/resources/kiosk/css/screen.css
@@ -387,3 +387,4 @@ nav ul li:first-child { border-left:none; }
 }
 .order_list_div ul li{display: inline-block;}
 .order_list_div ul li:nth-child(2){float: right;}
+.check_btn {background:#98FB98; width:200px; height:100px; font-size:20pt; font-weight:bold; margin-top:10px; float:left; position:relative; left:30px; bottom:11px; border-radius:12px; outline:0; border:none; cursor:pointer; box-shadow: 3px 3px 3px 3px gray;}
