--- a/Hamburger_Store_Managerment_System/src/main/webapp/resources/css/pos.css
+++ b/Hamburger_Store_Managerment_System/src/main/webapp/resources/css/pos.css
@@ -94,10 +94,10 @@ textarea{resize: none;}
 *{margin: 0; padding: 0; border-sizing:border-box;}
 
 a{color:#000; text-decoration:none;}
-body{min-width: 1024px;}
+body{min-width: 1024px;background:#e9e9e9}
 #container{width:100%; margin: 0 auto;}
 #header{width:100%; background: #4f90cc; margin: 0 auto;}
-.margin{padding-top: 20px; padding-left:300px; background:#e9e9e9;}
+.margin{padding-top: 20px; padding-left:300px; background:#e9e9e9b}
 #wrap-center{width: 1024px; margin: 0 auto;}
 #wrap-center > .navi ul{
     display: flex; 
@@ -126,7 +126,7 @@ body{min-width: 1024px;}
 /* .right-section > .right-table{width: 65%;} */
 .right-table > th {border-right:1px solid;}
 .right-talbe tr > th > a {color:white;}
-footer{clear: both; width: 35%;}
+/* footer{clear: both; width: 35%;} */
 .none{display: none;}
 .pName{background:#dfdfdf; border-radius:5px;}
 .pPrice{margin-top:-5px; line-height:30px; background:#f0f0f0; border-radius:5px;}
@@ -136,9 +136,9 @@ footer > .pay ul li{display: inline-block; width: 100px; margin-top: 10px; margi
 footer > .pay ul li:hover{color:white; text-decoration:none;}
 footer > .pay ul li a:hover{color:white; text-decoration:none;}
 .crud > li a:hover{color:white; text-decoration:none;}
-footer{clear: both; width: 30%;}
-.ul {list-style-type: none; display: flex;   flex-wrap: wrap;}
-.ul li{background: skyblue; width:20%; margin-right:10px; margin-top: 10px; margin-bottom:30px; height: 100px; border-radius:5px; line-height: 90px; font-size: 13px;}
+/* footer{clear: both; width: 30%;} */
+.ul {list-style-type: none; display: flex;   flex-wrap: wrap; width:839px; overflow-y:scroll; height:741px;}
+.ul li{background: skyblue; width:195px;; margin-right:10px; margin-top: 10px; margin-bottom:30px; height: 100px; border-radius:5px; line-height: 90px; font-size: 13px;}
  h1{ 
          font-family: 'Oswald', sans-serif; 
          font-size: 30px; 
