--- a/Hamburger_Store_Managerment_System/src/main/webapp/resources/css/member.css
+++ b/Hamburger_Store_Managerment_System/src/main/webapp/resources/css/member.css
@@ -51,7 +51,8 @@ h3{
   font-family: 'Abel', sans-serif;
   color: white;
   text-align:center;
-/*   width:220px; */
+   width:241px; 
+ margin-top:30px;
   transform: translatex(12px);
 }
 
