--- a/Hamburger_Store_Managerment_System/src/main/webapp/resources/css/pos.css
+++ b/Hamburger_Store_Managerment_System/src/main/webapp/resources/css/pos.css
@@ -97,7 +97,7 @@ a{color:#000; text-decoration:none;}
 body{min-width: 1024px;background:#e9e9e9}
 #container{width:100%; margin: 0 auto;}
 #header{width:100%; background: #4f90cc; margin: 0 auto;}
-.margin{padding-top: 20px; padding-left:300px; background:#e9e9e9b}
+.margin{padding-top: 20px; padding-left:200px; background:#e9e9e9b}
 #wrap-center{width: 1024px; margin: 0 auto;}
 #wrap-center > .navi ul{
     display: flex; 
@@ -109,8 +109,9 @@ body{min-width: 1024px;background:#e9e9e9}
 	position:relative !important;
 	top:0;
 }
+.cancel {color:#000;}
 /* .navi > ul > li{ margin-right: 15%;} */
-.left-section{float: left; width: 35%;}
+.left-section{float: left; width: 40%;}
 .take{width: 100%; font-size: 16px; background: green; border-radius: 3px; color: white; height: 40px; line-height: 40px;}
 .take > p{margin-left: 20px; font-weight: 700;}
 .top-table{margin-top: 10px; border: 1px solid #d0d0d0; height: 500px; overflow:auto; overflow-x:hidden; text-align:center;}
@@ -121,24 +122,25 @@ body{min-width: 1024px;background:#e9e9e9}
 .total > table > thead > tr > th{width:100%; height:40px; background: #4682b4; border-radius: 5px; color:#fff;}
 .total > table td {background: #dfdfdf; border-radius: 2px; padding: 5px;}
 .crud-width{width: 100%;}
-.crud > li{display: inline-block; background:#bac9e0; float: left; margin-right: 8px; margin-top: 10px; border-radius: 5px; width: 100px; height: 50px; line-height: 50px; text-align: center;}
-.right-section{width:61%; float: right; text-align: center;}
+.crud > li{display: inline-block; background:#bac9e0; float: left; margin-right: 8px; margin-top: 10px; border-radius: 5px; width: 120px; height: 55px; line-height: 56px; text-align: center;}
+.right-section{width:56%; float: right; text-align: center;}
 /* .right-section > .right-table{width: 65%;} */
 .right-table > th {border-right:1px solid;}
 .right-talbe tr > th > a {color:white;}
-/* footer{clear: both; width: 35%;} */
+footer{clear: both; width: 35%;}
 .none{display: none;}
 .pName{background:#dfdfdf; border-radius:5px;}
 .pPrice{margin-top:-5px; line-height:30px; background:#f0f0f0; border-radius:5px;}
 right-section{width:65%; float: right; text-align: center;}
 .right-section > .right-table { width: 85%; table-layout: fixed; border-collapse: collapse;background:#d35448; line-height: 50px; color:#ffffff; border-radius: 5px;}
-footer > .pay ul li{display: inline-block; width: 100px; margin-top: 10px; margin-right:2px; text-align: center;height: 70px; background: #005282; line-height: 70px; color:white; border-radius: 5px;margin-bottom: 5px;}
+footer > .pay ul li{display: inline-block; width: 121px; margin-top: 10px; margin-right:2px; text-align: center;height: 70px; background: #005282; line-height: 70px; color:white; border-radius: 5px;margin-bottom: 5px;}
 footer > .pay ul li:hover{color:white; text-decoration:none;}
 footer > .pay ul li a:hover{color:white; text-decoration:none;}
 .crud > li a:hover{color:white; text-decoration:none;}
 /* footer{clear: both; width: 30%;} */
-.ul {list-style-type: none; display: flex;   flex-wrap: wrap; width:839px; overflow-y:scroll; height:741px;}
-.ul li{background: skyblue; width:195px;; margin-right:10px; margin-top: 10px; margin-bottom:30px; height: 100px; border-radius:5px; line-height: 90px; font-size: 13px;}
+.ul {list-style-type: none; display: flex;   flex-wrap: wrap; width:839px;}
+/*  overflow-y:scroll; height:741px; */
+.ul li{background: skyblue; width:197px;; margin-right:10px; margin-top: 10px; margin-bottom:30px; height: 100px; border-radius:5px; line-height: 90px; font-size: 13px;}
  h1{ 
          font-family: 'Oswald', sans-serif; 
          font-size: 30px; 
@@ -461,19 +463,24 @@ footer > .pay ul li a:hover{color:white; text-decoration:none;}
      	font-weight:600;
      	padding-bottom: 15px;
      	border-bottom: 2px solid #000;
+     	margin-bottom: 10px;
      }
      .setSideUl{
      	border-bottom : 1px solid #a1a1a1;
-     	padding: 15px;
+     	padding: 10px;
+     	margin-bottom:10px;
      }
      .setSideUl li {
      	display:inline-block;
      	font-weight:600;
+     	position: relative;
+    	bottom: 5px;
      }
      .setSideItem {
      	 color:#faae3b;
      	 cursor: pointer;
      	 font-weight:600;
+     	 width: 92px;
      }
      .setSideAddPrice {
      	margin-left: 130px;
@@ -556,7 +563,7 @@ footer > .pay ul li a:hover{color:white; text-decoration:none;}
      	 color:#faae3b;
      	 font-weight:600;
      	 cursor: pointer;
-     	 width: 50px;
+     	 width: 77px;
      }
      .setDrinkAddPrice {
      	margin-left: 130px;
